src/objects/Apttus_Rebate__AgreementPayoutSchedule__c.object
<CustomObject>
    <description>Represents the payout for all incentives for an agreement</description>
    <fields>
        <fullName>APTS_ApprovalStatus__c</fullName>
        <description>Kauri wave 3: Indicate whether the rebate amount is approved or not</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Not required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_InterfaceStatus__c</fullName>
        <label>Interface Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uploaded to TAS</fullName>
                </value>
                <value>
                    <fullName>Pending upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_PaymentStatus__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Payout Schedules</relationshipLabel>
        <relationshipName>AgreementPayoutSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__BenefitAmountOverride__c</fullName>
        <description>The incentive benefit amount overridden by custom calculation</description>
        <inlineHelpText>The total incentive benefit amount overridden by custom calculation</inlineHelpText>
        <label>Benefit Amount (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__BenefitAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The total incentive benefit amount</inlineHelpText>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__DeductionAmountOverride__c</fullName>
        <description>The incentive deduction amount overridden by custom calculation</description>
        <inlineHelpText>The total incentive deduction amount overridden by custom calculation</inlineHelpText>
        <label>Deduction Amount (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__DeductionAmount__c</fullName>
        <description>The incentive deduction amount</description>
        <inlineHelpText>The total incentive deduction amount</inlineHelpText>
        <label>Deduction Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__NetPayout__c</fullName>
        <description>The net payout amount</description>
        <formula>Apttus_Rebate__BenefitAmount__c - Apttus_Rebate__DeductionAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The net payout amount</inlineHelpText>
        <label>Net Payout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PeriodDate__c</fullName>
        <description>The payout period date</description>
        <inlineHelpText>The payout period date</inlineHelpText>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PeriodStartDate__c</fullName>
        <description>The period start date</description>
        <inlineHelpText>The period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__Status__c</fullName>
        <description>The schedule status</description>
        <inlineHelpText>The schedule status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement Payout Schedule</label>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Payout Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>